modified HTTP verb for update
